# pure-ear

./: .gitignore  Cargo.toml  README.md  cargo-install.sh  index.html  package-lock.json  package.json  packages.dhall  spago.dhall
src/: Main.purs  index.html  index.js  lib.rs  main.rs
src/PureEar/Page/: Home.purs
src/components/: counter_btn.rs  meter.rs  mod.rs  quiz_button.rs  quiz_ctl.rs  quiz_item_ctl.rs  quiz_question.rs
src/model/: mod.rs  quiz.rs  quiz_item.rs
src/model/music/: mod.rs  scale_degree.rs
src/pages/: home.rs
