[package]
name = "pure-ear"
version = "0.1.0"
edition = "2021"
authors = ["Alex Kuprienko <akuprienko@williamhill.us>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.3.2", features = ["wasm_js"] }
rand = "0.9.0"
leptos = { version = "0.7.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.7.8" }
leptos_router = { version = "0.7.8", features = ["nightly"] }
console_log = "1"
log = "0.4.27"
console_error_panic_hook = "0.1"
thaw = { version = "0.4.5", features = ["csr", "nightly"] }
thaw_utils = { version = "0.1.1", features = ["csr", "nightly"] }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"
web-sys = { version = "0.3.77", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
